uploading jul6th42

--- a/may21th42/Makefile
+++ b/may21th42/Makefile
@@ -8,6 +8,9 @@ SRCS = ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c ft_isascii.c f
        ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_strtrim.c ft_substr.c ft_tolower.c ft_toupper.c
 OBJS = $(SRCS:.c=.o)
 
+BONUS_SRCS = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear\
+			 ft_lstiter.c ft_lstmap.c
+
 all: $(NAME)
 
 $(NAME): $(OBJS)
